force-app/main/default/objects/bofc__BOFCManageRecordType__c/bofc__BOFCManageRecordType__c.object-meta.xml
<CustomObject>
    <label>BOFCManageRecordType</label>
    <nameField>
        <label>BOFCManageRecordType Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFCManageRecordTypes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>