force-app/main/default/objects/bofc__BOFCManageRecordType__c/fields/bofc__DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>bofc__DeveloperName__c</fullName>
    <label>DeveloperName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>