force-app/main/default/objects/bofc__BOFCManageRecordType__c/fields/bofc__EMessage__c.field-meta.xml
<CustomField>
    <fullName>bofc__EMessage__c</fullName>
    <label>EMessage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>