force-app/main/default/objects/bofc__BOFCManageRecordType__c/fields/bofc__Namespace__c.field-meta.xml
<CustomField>
    <fullName>bofc__Namespace__c</fullName>
    <label>Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>