force-app/main/default/objects/bofc__BOFCManageRecordType__c/fields/bofc__PID__c.field-meta.xml
<CustomField>
    <fullName>bofc__PID__c</fullName>
    <label>PID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>