force-app/main/default/objects/bofc__BOFCManageRecordType__c/fields/bofc__ProfileIDs__c.field-meta.xml
<CustomField>
    <fullName>bofc__ProfileIDs__c</fullName>
    <label>ProfileIDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>