force-app/main/default/objects/bofc__BOFCManageRecordType__c/fields/bofc__RecordTypeIDVal__c.field-meta.xml
<CustomField>
    <fullName>bofc__RecordTypeIDVal__c</fullName>
    <label>RecordTypeIDVal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>