force-app/main/default/objects/bofc__BOFCManageRecordType__c/fields/bofc__Status__c.field-meta.xml
<CustomField>
    <fullName>bofc__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>